:speech_balloon: add and update
add and update text and literals

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#cursos">Cursos</a>
               </li>
+               <li class="nav-item">
+                <a class="nav-link" href="#tutorias">Tutorías</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#comunidad">Comunidad</a>
               </li>
@@ -91,7 +94,7 @@
        </div>
        <div class="col-md-3 align-self-center lead py-4">
          <p>
-           <h2 class="text-primary">50+</h2>
+           <h2 class="text-primary">70+</h2>
            <p>Alumnos en la comunidad de <code>LofiDev</code> en Discord.</p>
            <a href="https://discord.gg/QQ956GWych" class="btn btn-link alink">Ingresa ahora! ></a>
          </p>
@@ -131,48 +134,47 @@
       </article>
     </section>
     <!--::::CONTENT2::::--->
-    <section class="container" id="cursos">
-      <div class="container text-center py-4 my-4">
-      <h3>Cursos</h3></div>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-
-        <div class="col">
-          <div class="card h-100 shadow p-3 mb-5 bg-body rounded">
-            <img src="src/img/images/preview.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Terminal de Linux</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-              <div class="card-footer text-center">
-              <a href="#" class="btn btn-outline-primary">Ver curso</a>
+    <section class="container py-2 my-2" id="cursos">
+      <article class="py-2 my-2">
+         <h3 class="text-center">Cursos</h3></div>
+        <div class="row row-cols-1 row-cols-md-4 g-4 py-2 my-2">
+          <div class="col">
+            <div class="card">
+              <a href="#"><img src="src/img/course/course-css.jpg" class="card-img-top" alt="..."></a>
+              <div class="card-body">
+               <h5 class="card-title"><a href="#" class="alink">Card title</a></h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <a href="#"><img src="src/img/course/course-javascript.jpg" class="card-img-top" alt="..."></a>
+              <div class="card-body">
+                <h5 class="card-title"><a href="#" class="alink">Card title</a></h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <a href="#"><img src="src/img/course/course-wordpress.jpg" class="card-img-top" alt="..."></a> 
+              <div class="card-body">
+                <h5 class="card-title"><a href="#" class="alink">Card title</a></h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <a href="#"><img src="src/img/course/course-node.jpg" class="card-img-top" alt="..."></a>
+              <div class="card-body">
+                <h5 class="card-title"><a href="#" class="alink">Card title</a></h5>d with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100 shadow p-3 mb-5 bg-body rounded">
-            <img src="src/img/images/preview.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">GIT y GITHUB</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-              <div class="card-footer text-center">
-              <a href="#" class="btn btn-outline-primary">Ver curso</a>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100 shadow p-3 mb-5 bg-body rounded">
-            <img src="src/img/images/preview.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">HTML y CSS</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-              <div class="card-footer text-center">
-              <a href="#" class="btn btn-outline-primary">Ver curso</a>
-              </div>
-          </div>
-        </div>
-      </div>
+      </article>
     </section>
     <!--::::CONTENT3::::--->
     <section class="container-fluid my-5 bg-light">
@@ -187,11 +189,11 @@
                 <p>Satisfacción</p>
               </div>
               <div class="col-md-4">
-                <h3 class="text-primary">7 días</h3>
+                <h3 class="text-primary">15 días</h3>
                 <p>Consultas</p>
               </div>
               <div class="col-md-4">
-                <h3 class="text-primary">50+</h3>
+                <h3 class="text-primary">70+</h3>
                 <p>Estudiantes</p>
               </div>
             </div>
@@ -203,13 +205,65 @@
       </article>
     </section>
     <!--::::CONTENT4::::--->
-    <section><article></article></section>
+    <section class="container text-center" id="tutorias">
+      <div class="container text-center py-4 my-4">
+      <h3>Testimonios</h3></div>
+      <article class="container py-4 my-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 ">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body bg-light rounded">
+                <img src="src/img/images/franciscode.jpeg" class="avatar">
+                <h5 class="card-title" >FrancisCode</h5>
+                <p class="card-text" >Junix Me dió una ruta a seguir para convertirme en un buen desarrollador, y ya despues de eso se convirtió en mi mentor, recomendandome siempre que debo hacer y como hacerlo, es 10/10, le debo la mayoría de lo que se a él, me ha dicho que la mejor manera de aprender, es enseñar, y así es.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body bg-light rounded">
+                <img src="src/img/images/fr3ddl.jpeg" class="avatar">
+                <h5 class="card-title">Freddl</h5>
+                <p class="card-text" >Hola soy Freddl, Desarrollador web front-end. Junix es una persona con muchos conocimientos, carismática y muy atenta. Te enseña cosas que tal vez no sabías como hacer, te ayuda en tus errores.
+                Se dedica mucho a ayudar a otros y lo hace muy bien</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body bg-light rounded">
+                <img src="src/img/images/darkay.jpeg" class="avatar">
+                <h5 class="card-title">DarKay117</h5>
+                <p class="card-text" >Ha sido un mentor atento y considerado con mis capacidades, tratando de guiarme en aquellas cosas en las que no era bueno o que no entendía. Las veces que he acudido a él, nunca me negó su ayuda, logró ayudarme y darme consejos. Se nota que lleva tiempo trabajando en esta área, una experiencia agradable trabajar bajo su supervisión.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100"> 
+              <div class="card-body bg-light rounded">
+                <img src="src/img/images/carlossh.jpeg" class="avatar">
+                <h5 class="card-title" >Carloshha</h5>
+                <p class="card-text" >Una experiencia única, probé diferentes "academias" o cursos y en ninguno se tomaban tanto el trabajo de que se entienda, la verdad que recomendado al 100%.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100"> 
+              <div class="card-body bg-light rounded">
+                <img src="src/img/images/etapas.jpeg" class="avatar">
+                <h5 class="card-title" >Etapas</h5>
+                <p class="card-text" >Sinceramente para alguien que tenía cero conocimiento de todo este mundo  de la programación, aprendí muchísimo, aprendí de una manera increíble. La verdad es que me sorprendí la cantidad de información y conocimientos que adquirí en tan poco tiempo y sobre todo no me creo lo que pude llegar a conseguir gracias a lo que me enseñaste.</p>
+              </div>
+            </div>
+          </div>
+      </article>
+    </section>
     <!--::::FOOTER::::--->
     <footer class="container-fluid m-0 p-0">
        <!--::::SEPARADOR::::-->
-    <div class="containe-fluid m-0 p-0" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #516F8D;"></path></svg>
-    </div>
-    <div style="background: #516F8D; overflow: hidden;" class="container-fluid m-0 p-0">
+      <div class="containe-fluid m-0 p-0" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #516F8D;"></path></svg>
+      </div>
+     <div style="background: #516F8D; overflow: hidden;" class="container-fluid m-0 p-0">
       <p class="text-white text-center">Copyright © 2021 LofiDev. All rights reserved.</p>
       <p class="text-white text-center">Terms | Privacy Policy | Cookie Policy </p>
     </div>
