--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- SEO -->
+    <meta property="og:title" content="LofiDev">
+    <meta name="author" content="LofiDev">
+    <meta property="og:locale" content="en_US">
+    <meta name="description" content="Brindamos cursos y mentorías sobre desarrollo web, únete a la comunidad y comparte con todos.">
+    <meta property="og:description" content="Brindamos cursos y mentorías sobre desarrollo web, únete a la comunidad y comparte con todos.">
+    <link rel="canonical" href="https://lofi-dev.github.io/web/">
+    <meta property="og:url" content="https://lofi-dev.github.io/web/">
+    <meta property="og:site_name" content="lofidev">
+    <meta property="og:image" content="https://github.com/lofi-dev/web/blob/main/src/img/brand/logo-white.png">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@junix_7">
+    <meta name="twitter:creator" content="@junix_7">
+    <meta name="twitter:title" content="lofidev">
+    <meta name="twitter:description" content="Brindamos cursos y mentorías sobre desarrollo web, únete a la comunidad y comparte con todos.">
+    <meta name="twitter:image" content="https://github.com/lofi-dev/web/blob/main/src/img/brand/logo-white.png">
+    <meta name="twitter:image:alt" content="lofidev">
+    <link href="https://github.com/lofi-dev/web/blob/main/src/img/brand/logo-white.png" rel="shortcut icon" type="image/png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
